--- a/sample.conf
+++ b/sample.conf
@@ -1,4 +1,21 @@
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = INFO
+}
+
+# Note to get debugging info, change s/INFO/DEBUG above and below.
+
 s3blobserver {
+  log4j = """
+     log4j.rootLogger=INFO, LOGFILE
+     log4j.appender.LOGFILE=org.apache.log4j.DailyRollingFileAppender
+     log4j.appender.LOGFILE.File=log
+     log4j.appender.LOGFILE.DatePattern='.'yyyy-MM-dd
+     log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
+     log4j.appender.LOGFILE.layout.ConversionPattern=%d{ISO8601} %-5p %c %m%n
+     log4j.logger.org.apache.zookeeper=WARN
+     """
+
   cache {
     same-file-system = true
     directory = cache
@@ -6,6 +23,7 @@ s3blobserver {
   }
   s3 {
     bucket = mybucket
+    prefix = test/
   }
   committed {
     directory = blobs
@@ -13,7 +31,9 @@ s3blobserver {
     poll-interval = 1h
   }
   server {
-    port = 9090
+    port = 0
     host = localhost
+    path = /test
+    zookeeper = "127.0.0.1:2181"
   }
 }
