Allow configured data to be stored in the registered zookeeper node.

--- a/sample.conf
+++ b/sample.conf
@@ -35,5 +35,6 @@ s3blobserver {
     host = localhost
     path = /test
     zookeeper = "127.0.0.1:2181"
+    zookeeper-data = """{"deployment": "my,databases,main.0"}"""
   }
 }
