Move logging config into default config, especially the use of Slf4j, which shouldn't be overridden by the user.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,9 +1,15 @@
-akka.actor.deployment {
-  "/watcher/mover" {
-    router = round-robin
-    nr-of-instances = 9
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = INFO
+
+  actor.deployment {
+    "/watcher/mover" {
+      router = round-robin
+      nr-of-instances = 9
+    }
   }
 }
+
 s3blobserver {
   committed {
     age = 1h
